# sprite_manipulator

./: .gitattributes  .gitmodules  CMakeLists.txt  readme.md
src/: main.cpp
src/dviglo/fs/: file.cpp
